--- a/style.css
+++ b/style.css
@@ -182,6 +182,18 @@ th {
     input, select, button {
         padding: 0.6rem;
         font-size: 0.9rem;
+        
+    }
+    .btf{
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 20px;
+        padding: 1.5rem;
+        margin-bottom: 1.5rem;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+        color: black;
     }
 
     table {
