--- a/style.css
+++ b/style.css
@@ -268,14 +268,14 @@ th {
         .search-input {
             width: 100%;
             padding: 0.5rem 1rem;
-            border: none;
+            border: 1px solid black;
             border-radius: 20px;
             background: rgba(255, 255, 255, 0.2);
             color: black;
         }
 
         .search-input::placeholder {
-            color: rgba(69, 25, 25, 0.7);
+            color: rgba(23, 26, 39, 0.7);
         }
 
         .customer-count {
